--- a/requirements.yml
+++ b/requirements.yml
@@ -12,11 +12,10 @@ functional:
   - Пользователь должен иметь возможность просматривать задачи.
   - Пользователь должен иметь возможность создать новую задачу.
   - Пользователь должен иметь возможность изменить свои данные в личном кабинете.
-  - Пользователь должен иметь возможность просматривать исходный код игры на Githab.
   - Пользователь должен иметь возможность из личного кабинета перейти на сайт Hexlet.
   - Пользователь должен иметь возможность перейти в сообщество игры в телеграмм канале.
   - Пользователь должен иметь возможность просматривать завершенные игры.
-  - Пользователь должен иметь возможность в личном кабинете вести переписку в чате.
+  - Пользователь должен иметь возможность вести переписку в чате.
   - Пользователь должен иметь возможность во время переписки использовать смайлы.
   - Пользователь должен иметь возможность пригласить другого пользователя в игру.
   - Пользователь должен иметь возможность отправить личное сообщение другому пользователю.
