--- a/requirements.yml
+++ b/requirements.yml
@@ -10,8 +10,8 @@ functional:
   - Пользователь должен иметь возможность просматривать рейтинг пользователей.
   - Пользователь должен иметь возможность искать конкретного пользователя в списке.
   - Пользователь должен иметь возможность просматривать задачи.
-  - Пользователь должен иметь возможность создать новую задачу.
   - Пользователь должен иметь возможность изменить свои данные в личном кабинете.
+  - Пользователь должен иметь возможность просматривать исходный код игры на Githab
   - Пользователь должен иметь возможность из личного кабинета перейти на сайт Hexlet.
   - Пользователь должен иметь возможность перейти в сообщество игры в телеграмм канале.
   - Пользователь должен иметь возможность просматривать завершенные игры.
@@ -19,7 +19,6 @@ functional:
   - Пользователь должен иметь возможность во время переписки использовать смайлы.
   - Пользователь должен иметь возможность пригласить другого пользователя в игру.
   - Пользователь должен иметь возможность отправить личное сообщение другому пользователю.
-  - Пользователь имеет возможность создать игру.
   - Пользователь имеет возможность принять участие в созданной игре.
   - Пользователь должен иметь возможность выбрать во время игры язык программирования. 
   - Пользователь должен иметь возможность во время игры просматривать задачу на английском и русском языках.
@@ -39,4 +38,4 @@ non-functional:
   - Сайт должен быть способен обрабатывать большое количество трафика, минимум 1000 максимум 5000 пользователей.
 implicit:
   - Сайт должен быть безопасным и защищать данные пользователя.
-  - Во время регистрации и входа в систему при вводе не корректных данных система должна выдавать сообщение об ошибке. 
+  - Во время регистрации и входа в систему при вводе не корректных данных система должна выдавать сообщение об ошибке
