--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,6 @@
 ---
 functional:
-  - Пользователь должен иметь возможность зарегистрироваться на сайте.
+  - Пользователь должен иметь возможность зарегистрироваться на сайте
   - Пользователь должен иметь возможность войти в личный кабинет.
   - Пользователь должен иметь возможность выйти из личного кабинета.
   - Пользователь должен иметь возможность принять участие в игре без регистрации.
