--- a/requirements.yml
+++ b/requirements.yml
@@ -1,13 +1,14 @@
 ---
 functional:
-  - Пользователь должен иметь возможность зарегистрироваться на сайте
-  - Пользователь должен иметь возможность войти в личный кабинет.
+  - Пользователь должен иметь возможность зарегистрироваться на сайте.
+  - Пользователь должен иметь возможность авторизоваться.
   - Пользователь должен иметь возможность выйти из личного кабинета.
   - Пользователь должен иметь возможность принять участие в игре без регистрации.
   - Пользователь должен иметь возможность восстановить пароль.
   - Пользователь должен иметь возможность просматривать информацию о турнирах.
   - Пользователь должен иметь возможность создать турнир.
   - Пользователь должен иметь возможность просматривать рейтинг пользователей.
+  - Игроки должны получать очки за выйгрыш, которые влияют на рейтинг.
   - Пользователь должен иметь возможность искать конкретного пользователя в списке.
   - Пользователь должен иметь возможность просматривать задачи.
   - Пользователь должен иметь возможность создать новую задачу.
@@ -30,6 +31,7 @@ functional:
   - Пользователь должен иметь возможность предложить реванш сопернику.
   - Пользователь должен иметь возможность сдаться во время игры.
   - Пользователь должен иметь возможность из игры вернуться в личный кабинет.
+  - При вводе незарегистрированных данных, сайт должен выдать ошибку.
   - В форме регистрации поле "Nickname" может содержать буквы, цифры и символы подчеркивания, должен начинаться с латинской буквы и должен быть от 3 до 16 символов
   - В форме регистрации поле "Password Confirmation" должен быть от 6 до 16 символов и совпадать с полем " Password"
 non-functional:
