исправление отчета тестирования

--- a/testing-report.yml
+++ b/testing-report.yml
@@ -25,7 +25,7 @@
 
 - summary: |
     Проверка на возможность востановить пароль
-  status: fail
+  status: pass
 
 - summary: |
     Проверка на возможность просматривать информацию о турнирах
