--- a/issues.yml
+++ b/issues.yml
@@ -1,3 +1,3 @@
 ---
 issues:
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1928"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1928#issuecomment-2207189130"
