--- a/requirements.yml
+++ b/requirements.yml
@@ -6,15 +6,15 @@ functional:
   - Пользователь должен иметь возможность принять участие в игре без регистрации.
   - Пользователь должен иметь возможность восстановить пароль.
   - Пользователь должен иметь возможность просматривать информацию о турнирах.
-  - Пользователь должен иметь возможность создать турнир.
   - Пользователь должен иметь возможность просматривать рейтинг пользователей.
-  - Игроки должны получать очки за выйгрыш, которые влияют на рейтинг.
+  - Пользователь должен иметь возможность выйграть в игре
   - Пользователь должен иметь возможность искать конкретного пользователя в списке.
   - Пользователь должен иметь возможность просматривать задачи.
   - Пользователь должен иметь возможность создать новую задачу.
   - Пользователь должен иметь возможность изменить свои данные в личном кабинете.
   - Пользователь должен иметь возможность из личного кабинета перейти на сайт Hexlet.
   - Пользователь должен иметь возможность перейти в сообщество игры в телеграмм канале.
+  - Пользователь может просмотреть созданную игру в списке лобби.
   - Пользователь должен иметь возможность просматривать завершенные игры.
   - Пользователь должен иметь возможность вести переписку в чате.
   - Пользователь должен иметь возможность во время переписки использовать смайлы.
