исправление формулировки тест кейсов

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -6,9 +6,7 @@
   prerequisites: |
     "no-data"
   test-data: |
-    Username = vitklimin2
-    Email = klimin.vitaik@inbox.ru
-    Password = Ghjnjnbg1991
+    "no-data"
   steps:
     - Нажимаем на "Sign up"
     - Вводим Nickname
@@ -34,14 +32,14 @@
     - Вводим Password
     - Нажимаем кнопку «Submit»
   expected-result: |
-    Игрок попадает на страницу Lobby игры
+    Пользователь успешно авторизован
 
 - summary: |
-    Проверка входа в личный кабинет с помощью данных из Github
+    Проверка авторизации через GitHub
   requirement: |
     Пользователь должен иметь возможность авторизоваться
   prerequisites: |
-    У пользователя есть учетная запись на Github
+    Пользователь вошел в свою учетную запись на GitHub
   test-data: |
     "no-data"
   steps:
@@ -49,14 +47,14 @@
     - Нажимаем на "Sign in with Github"
     - Нажимаем кнопку «Sign in»
   expected-result: |
-    Игрок попадает на страницу Lobby игры 
+    Пользователь успешно авторизован через Github
 
 - summary: |
-    Проверка входа в личный кабинет с помощью данных из Discord
+    Проверка авторизации через Discord
   requirement: |
     Пользователь должен иметь возможность авторизоваться
   prerequisites: |
-    У пользователя есть учетная запись на Discord
+    Пользователь вошел в свою учетную запись Discord
   test-data: |
     "no-data"
   steps:
@@ -64,10 +62,26 @@
     - Нажимаем на "Sign in with Discord"
     - Нажимаем кнопку «Вход»
   expected-result: |
-    Игрок попадает на страницу Lobby игры 
+    Пользователь успешно авторизован через Discord
+
+- summary: |
+   Проверка авторизации незарегистрированного пользователя
+  requirement: |
+   При вводе незарегистрированных данных, сайт должен выдать ошибку
+  prerequisites: |
+   "no-data"
+  test-data: |
+   Ввести любое слово, например Email = vitkl@mail.ru
+   Ввести любое слово, например Password = Prototip2019.
+  steps:
+   - Ввести Email
+   - Ввести Password
+   - Нажимаем кнопку «Submit»
+  expected-result: |
+   Появляется сообщение "EMAIL_NOT_FOUND"
     
 - summary: |
-    Проверка на возможность выйти из личного кабинета
+    Проверка выхода из личного кабинета
   requirement: |
     Пользователь должен иметь возможность выйти из личного кабинета
   prerequisites: |
@@ -81,7 +95,7 @@
     Сайт выходит из системы и перенаправляет нас на главную страницу сайта 
 
 - summary: |
-    Проверка на возможность принять участие в игре без регистрации
+    Проверка создания игры без регистрации
   requirement: |
     Пользователь должен иметь возможность принять участие в игре без регистрации
   prerequisites: |
@@ -91,10 +105,10 @@
   steps:
     - Нажимаем на кнопку "try simple batlle" на главной странице сайта
   expected-result: |
-    Открывается игра 
+    Игра без регистрации успешно создана
 
 - summary: |
-    Проверка на возможность востановить пароль
+    Проверка восстановления пароля
   requirement: |
     Пользователь должен иметь возможность восстановить пароль
   prerequisites: |
@@ -114,7 +128,7 @@
     Новый пароль сохранился в системе
 
 - summary: |
-    Проверка на возможность просматривать информацию о турнирах
+    Проверка просмотра информации о турнирах
   requirement: |
     Пользователь должен иметь возможность просматривать информацию о турнирах
   prerequisites: |
@@ -127,9 +141,9 @@
     Отображается список турниров который состоит из: name, type, level, state, starts_at, actions
 
 - summary: |
-    Проверка на возможность создать турнир
+    Отображение созданной игры с другим пользователем в списке лобби
   requirement: |
-    Пользователь должен иметь возможность создать турнир
+    Пользователь может просмотреть созданную игру в списке лобби.
   prerequisites: |
     "no-data"
   test-data: |  
@@ -138,12 +152,12 @@
     - Нажимаем на "CREATE A GAME"
     - Нажимаем на "Create battle"
   expected-result: |
-    В списке турниров появляется созданный турнир
+    Игра отображается в списке лобби
 
 - summary: |
-    Получения очков по итогам игры 
+    Проверка победы в игре
   requirement: |
-    Игроки должны получать очки за выйгрыш, которые влияют на рейтинг
+    Пользователь должен иметь возможность выйграть в игре
   prerequisites: |
     Создать игру с ботом rect_area, level -1 звезда, Time control - 10 min, язык - NodeJS 
   test-data: |
@@ -159,10 +173,10 @@
     - Ввести код 
     - Нажать "Run"
   expected-result: |
-    Откротся окно  "Woohoo, you're Champion!!!!!" и танцующим бананом
+    Пользователь победил в игре
 
 - summary: |
-    Проверка на возможность просматривать рейтинг пользователей
+    Проверка просмотра рейтинга пользователей
   requirement: |
     Пользователь должен иметь возможность просматривать рейтинг пользователей
   prerequisites: |
@@ -175,7 +189,7 @@
     Открывается страница игрока с его рейтингом и статистикой
     
 - summary: |
-    Проверка на возможность искать конкретного пользователя в списке
+    Проверка поиска конкретного пользователя в списке
   requirement: |
     Пользователь должен иметь возможность искать конкретного пользователя в списке
   prerequisites: |
@@ -190,7 +204,7 @@
     В списке появляеться пользователь которого искали
 
 - summary: |
-    Проверка на возможность просматривать задачи
+    Проверка просмотра списка задач
   requirement: |
     Пользователь должен иметь возможность просматривать задачи
   prerequisites: |
@@ -204,7 +218,7 @@
     Открывается таблица задач
 
 - summary: |
-    Проверка на возможность изменить свои данные в личном кабинете
+    Успешное изменение своих данных в личном кабинете
   requirement: |
     Пользователь должен иметь возможность изменить свои данные в личном кабинете
   prerequisites: |
@@ -222,7 +236,7 @@
     Появляется сообщение об успешной изменении данных
 
 - summary: |
-    Проверка на возможность просматривать исходный код игры на Githab
+    Проверка просмотра исходного кода игры на Githab
   requirement: |
     Пользователь должен иметь возможность просматривать исходный код игры на Githab
   prerequisites: |
@@ -236,7 +250,7 @@
     Отоброжается репозиторий Github
 
 - summary: |
-    Проверка на возможность из личного кабинета перейти на сайт Hexlet
+    Проверка перехода из личного кабинета на сайт Hexlet
   requirement: |
     Пользователь должен иметь возможность из личного кабинета перейти на сайт Hexlet
   prerequisites: |
@@ -250,7 +264,7 @@
     Отоброжается главная страница сайта https://ru.hexlet.io/
 
 - summary: |
-    Проверка на возможность перейти в сообщество игры в телеграмм канале
+    Проверка перехода в сообщество игры в телеграмм канале
   requirement: |
     Пользователь должен иметь возможность перейти в сообщество игры в телеграмм канале
   prerequisites: |
@@ -264,7 +278,7 @@
     Отоброжается приглашение в сообщество в телеграмм
 
 - summary: |
-    Проверка на возможность просматривать завершенные игры
+    Проверка просмотра завершенных игр
   requirement: |
     Пользователь должен иметь возможность просматривать завершенные игры
   prerequisites: |
@@ -280,7 +294,7 @@
     Переходим в игру в котором отображается весь процесс прошедшей игры    
     
 - summary: |
-    Проверка на возможность вести переписку в чате
+    Проверка отправки сообщения в чат с главной страницы
   requirement: |
     Пользователь должен иметь возможность вести переписку в чате
   prerequisites: |
@@ -288,33 +302,21 @@
   test-data: |  
     "no-data" 
   steps:
-    - В строке чата пишем любой текст 
+    - В строке чата пишем любой текст и смайлы
     - Нажимаем на "Send"
   expected-result: |
     Текст виден в чате всем пользователям
 
 - summary: |
-    Проверка на возможность во время переписки использовать смайлы
-  requirement: |
-    Пользователь должен иметь возможность во время переписки использовать смайлы
-  prerequisites: |
-    "no-data"
-  test-data: |  
-    "no-data" 
-  steps:
-    - В строке чата выбираем любой смайл 
-    - Нажимаем на "Send"
-  expected-result: |
-    Смайл отображается в чате для всех пользователей
-
-- summary: |
-    Проверка на возможность пригласить другого пользователя в игру
+    Успешной приглашение другого пользователя в игру
   requirement: |
     Пользователь должен иметь возможность пригласить другого пользователя в игру
   prerequisites: |
     Пользователь авторизован под двумя учетными записями
   test-data: |  
-    "no-data"
+    Данные для входа под вторым пользователем
+    Email: klimin.vitaik@inbox.ru
+    Password: Ghjnjnbg1991
   steps:
     - В строке "Online players" нажимаем на второго своего авторизированного пользователя 
     - Выбираем "Send an invite"
@@ -327,13 +329,15 @@
     Начинается игра
 
 - summary: |
-    Проверка на возможность отправить личное сообщение другому пользователю
+    Проверка отправки личного сообщения другому пользователю
   requirement: |
     Пользователь должен иметь возможность отправить личное сообщение другому пользователю
   prerequisites: |
     Пользователь авторизован под двумя пользователями
   test-data: |  
-    "no-data" 
+    Данные для входа под вторым пользователем
+    Email: klimin.vitaik@inbox.ru
+    Password: Ghjnjnbg1991
   steps:
     - В строке "Online players" нажимаем на второго своего авторизированного пользователя 
     - Выбираем "Direct massage"
@@ -343,7 +347,7 @@
     В чате отображается сообщение
 
 - summary: |
-    Проверка на возможность принять участие в созданной игре
+    Проверка принятия участия в созданной игре
   requirement: |
     Пользователь имеет возможность принять участие в созданной игре
   prerequisites: |
@@ -357,7 +361,7 @@
     Начинается игра
 
 - summary: |
-    Проверка на возможность выбрать во время игры язык програмирования
+    Успешная смена языка программирования во время игры
   requirement: |
     Пользователь должен иметь возможность выбрать во время игры язык программирования
   prerequisites: |
@@ -370,7 +374,7 @@
     Язык меняется на экране написания кода
     
 - summary: |
-    Проверка на возможность во время игры просматривать задачу на английском и русском языках
+    Успешный просмотр задач во время игры на английском и русском языках
   requirement: |
     Пользователь должен иметь возможность во время игры просматривать задачу на английском и русском языках
   prerequisites: |
@@ -383,7 +387,7 @@
     Описание задачи отображается на выбранном языке
 
 - summary: |
-    Проверка на возможность во время игры проверить решение
+    Успешная проверка решения во время игры
   requirement: |
     Пользователь должен иметь возможность во время игры проверить решение
   prerequisites: |
@@ -396,7 +400,7 @@
     В графе появится результат проверки
 
 - summary: |
-    Проверка на возможность во время игры просматривать свой редактор и редактор соперника
+    Проверка просмотра во время игры своего редактора и редактора соперника
   requirement: |
     Пользователь должен иметь возможность во время игры просматривать свой редактор и редактор соперника
   prerequisites: |
@@ -409,7 +413,7 @@
     На экране отображается свой редактор и редактор соперника
 
 - summary: |
-    Проверка на возможность просмотреть повтор игры
+    Проверка просмотра повтора игры
   requirement: |
     Пользователь должен иметь возможность просмотреть повтор игры
   prerequisites: |
@@ -423,7 +427,7 @@
     Просматривается запись игры
 
 - summary: |
-    Проверка на возможность во время игры сбросить редактор
+    Проверка сброса редактора во время игры 
   requirement: |
     Пользователь должен иметь возможность во время игры сбросить редактор
   prerequisites: |
@@ -436,7 +440,7 @@
     Поле редактора очищается и возвращается в исходное положение
 
 - summary: |
-    Проверка на возможность предложить реванш сопернику
+    Проверка возможности предложения реванша сопернику
   requirement: |
     Пользователь должен иметь возможность предложить реванш сопернику
   prerequisites: |
@@ -449,7 +453,7 @@
     Матч начинается заного
 
 - summary: |
-    Проверка на возможность сдаться во время игры
+    Проверка возможности сдаться во время игры
   requirement: |
     Пользователь должен иметь возможность сдаться во время игры
   prerequisites: |
@@ -463,7 +467,7 @@
     Появляется сообщение о том что матч проигран
 
 - summary: |
-    Проверка на возможность из игры вернуться в личный кабинет
+    Проверка выхода из игры в личный кабинет
   requirement: |
     Пользователь должен иметь возможность из игры вернуться в личный кабинет
   prerequisites: |
@@ -531,34 +535,3 @@
     - Выбираем устройство
   expected-result: |
     Сайт отображается адаптивно
-
-- summary: |
-   Проверка невозможности авторизации несуществующего в системе игрока
-  requirement: |
-   При вводе незарегистрированных данных, сайт должен выдать ошибку
-  prerequisites: |
-   "no-data"
-  test-data: |
-   Ввести любое слово, например Email = vitkl@mail.ru
-   Ввести любое слово, например Password = Prototip2019.
-  steps:
-   - Ввести Email
-   - Ввести Password
-   - Нажимаем кнопку «Submit»
-  expected-result: |
-   Появляется сообщение "EMAIL_NOT_FOUND"
-
-- summary: |
-    Проверка на безопасность сайта и защиту данных пользоватя
-  requirement: |
-    Сайт должен быть безопасным и защищать данные пользователя
-  prerequisites: |
-    "no-data"
-  test-data: |  
-    "no-data"
-  steps:
-    - Смотрим что в адресной строке URL начинается с HTTPS
-    - Нажимаем на замок перед адресной строкой
-    - Смотрим что есть информация о зашифрованных данных
-  expected-result: |
-    Появляется информация о том что соединенине защищено и данные передаются в зашифрованом виде
