--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,123 +8,123 @@
   status: pass
 
 - summary: |
-    Проверка входа в личный кабинет с помощью данных из Github
+    Проверка авторизации через GitHub
   status: pass
 
 - summary: |
-    Проверка входа в личный кабинет с помощью данных из Discord
+    Проверка авторизации через Discord
   status: pass 
 
 - summary: |
-    Проверка на возможность выйти из личного кабинета
+    Проверка авторизации незарегистрированного пользователя
+  status: pass 
+
+- summary: |
+    Проверка выхода из личного кабинета
   status: pass
 
 - summary: |
-    Проверка на возможность принять участие в игре без регистрации
+    Проверка создания игры без регистрации
   status: pass   
 
 - summary: |
-    Проверка на возможность востановить пароль
+    Проверка восстановления пароля
   status: pass
 
 - summary: |
-    Проверка на возможность просматривать информацию о турнирах
+    Проверка просмотра информации о турнирах
   status: pass
 
 - summary: |
-    Проверка на возможность создать турнир
+    Отображение созданной игры с другим пользователем в списке лобби
   status: pass
 
 - summary: |
-    Получения очков по итогам игры 
+    Проверка победы в игре 
   status: pass
 
 - summary: |
-    Проверка на возможность просматривать рейтинг пользователей
+    Проверка просмотра рейтинга пользователей
   status: pass 
  
 - summary: |
-    Проверка на возможность искать конкретного пользователя в списке
+    Проверка поиска конкретного пользователя в списке
   status: pass
 
 - summary: |
-    Проверка на возможность просматривать задачи
+    Проверка просмотра списка задач
   status: pass    
 
 - summary: |
-    Проверка на возможность изменить свои данные в личном кабинете
+    Успешное изменение своих данных в личном кабинете
   status: pass
 
 - summary: |
-    Проверка на возможность просматривать исходный код игры на Githab
+    Проверка просмотра исходного кода игры на Githab
   status: pass
 
 - summary: |
-    Проверка на возможность из личного кабинета перейти на сайт Hexlet
+    Проверка перехода из личного кабинета на сайт Hexlet
   status: pass 
 
 - summary: |
-    Проверка на возможность перейти в сообщество игры в телеграмм канале
+    Проверка перехода в сообщество игры в телеграмм канале
   status: pass
 
 - summary: |
-    Проверка на возможность просматривать завершенные игры
+    Проверка просмотра завершенных игр
   status: pass   
 
 - summary: |
-    Проверка на возможность в личном кабинете вести переписку в чате
+    Проверка отправки сообщения в чат с главной страницы
   status: pass
 
 - summary: |
-     Проверка на возможность во время переписки использовать смайлы
-  status: fail
-
-- summary: |
-    Проверка на возможность пригласить другого пользователя в игру
+    Успешной приглашение другого пользователя в игру
   status: pass
 
 - summary: |
-    Проверка на возможность отправить личное сообщение другому пользователю
+    Проверка отправки личного сообщения другому пользователю
   status: pass 
 
 - summary: |
-    Проверка на возможность принять участие в созданной игре
+    Проверка принятия участия в созданной игре
   status: pass  
 
 - summary: |
-    Проверка на возможность выбрать во время игры язык програмирования
+    Успешная смена языка программирования во время игры
   status: pass
 
 - summary: |
-    Проверка на возможность во время игры просматривать задачу на английском и русском языках
+    Успешный просмотр задач во время игры на английском и русском языках
   status: fail    
 
 - summary: |
-    Проверка на возможность во время игры проверить решение
+    Успешная проверка решения во время игры
   status: pass
 
 - summary: |
-    Проверка на возможность во время игры просматривать свой редактор и редактор соперника
+    Проверка просмотра во время игры своего редактора и редактора соперника
   status: pass      
 
 - summary: |
-    Проверка на возможность просмотреть повтор игры
+    Проверка просмотра повтора игры
   status: pass
 
 - summary: |
-    Проверка на возможность во время игры сбросить редактор
+    Проверка сброса редактора во время игры
   status: pass        
 
 - summary: |
-    Проверка на возможность предложить реванш сопернику
+    Проверка возможности предложения реванша сопернику
   status: pass
 
 - summary: |
-    Проверка на возможность сдаться во время игры
+    Проверка возможности сдаться во время игры
   status: pass          
 
 - summary: |
-    Проверка на возможность из игры вернуться в личный кабинет
+    Проверка выхода из игры в личный кабинет
   status: pass
 
 - summary: |
@@ -143,13 +143,3 @@
     Проверка на удобство использования на мобильном устройстве
   status: pass
 
-- summary: |
-    Проверка невозможности авторизации несуществующего в системе игрока
-  status: pass
-
-- summary: |
-    Проверка на безопасность сайта и защиту данных пользоватя
-  status: pass        
-
-
- 
